--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=cnab
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=manager
+spring.datasource.url=jdbc:postgresql://localhost:5432/bancocnab
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
